[gd_scene load_steps=3 format=3 uid="uid://ruwi6r0vlvwo"]

[ext_resource type="Script" uid="uid://c3elub4xc6ig0" path="res://Dialogs/Dialog Manager/dialog_mngr.gd" id="1_t1mrk"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nb712"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[node name="dialog_mngr" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_t1mrk")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0

[node name="Control2" type="Control" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 96)
layout_mode = 2

[node name="npc_icon" type="TextureRect" parent="MarginContainer/VBoxContainer/Control2"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_top = -32.0
offset_right = 192.0
offset_bottom = 64.0
grow_vertical = 2
expand_mode = 2

[node name="player_icon" type="TextureRect" parent="MarginContainer/VBoxContainer/Control2"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -192.0
offset_top = -32.0
offset_bottom = 64.0
grow_horizontal = 0
grow_vertical = 2
expand_mode = 2
flip_h = true

[node name="Panel" type="Panel" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_nb712")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Panel/MarginContainer"]
layout_mode = 2

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer/Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2

[node name="npc_name" type="RichTextLabel" parent="MarginContainer/VBoxContainer/Panel/MarginContainer/VBoxContainer/Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 8.0
offset_top = -22.0
offset_right = 233.0
offset_bottom = 23.0
grow_vertical = 2
theme_override_font_sizes/normal_font_size = 32
text = "Npc Name"
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="player_name" type="RichTextLabel" parent="MarginContainer/VBoxContainer/Panel/MarginContainer/VBoxContainer/Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -233.0
offset_top = -45.0
offset_right = -10.0
offset_bottom = 45.0
grow_horizontal = 0
grow_vertical = 2
theme_override_font_sizes/normal_font_size = 32
text = "Player Name"
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="dialog_box" type="RichTextLabel" parent="MarginContainer/VBoxContainer/Panel/MarginContainer/VBoxContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/normal_font_size = 24
text = "Lorem ipsum dolor sit amet"
fit_content = true

[node name="continue_text" type="RichTextLabel" parent="MarginContainer/VBoxContainer/Panel/MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(96.195, 0)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
text = "(Y) Continue"
fit_content = true
horizontal_alignment = 2
